# Flatseal

./: .eslintrc.yml  .gitignore  .lint-condo.yaml  CHANGELOG.md  DOCUMENTATION.md  README.md  TIPSANDTRICKS.md  changelog.md  com.github.tchx84.Flatseal.json  meson.build
data/: com.github.tchx84.Flatseal.appdata.xml.in  com.github.tchx84.Flatseal.desktop.in  com.github.tchx84.Flatseal.gschema.xml  com.github.tchx84.Flatseal.metainfo.xml.in  com.github.tchx84.Flatseal.service.in  gschemas.compiled  meson.build
data/icons/: meson.build
src/: aboutDialog.js  aboutDialog.ui  appInfoViewer.js  appInfoViewer.ui  application.css  application.js  applicationRow.js  applicationRow.ui  com.github.tchx84.Flatseal.data.gresource.xml  com.github.tchx84.Flatseal.in  com.github.tchx84.Flatseal.src.gresource.xml  groupRow.js  groupRow.ui  main.js  menu.ui  meson.build  model.js  pathRow.js  pathRow.ui  pathsViewer.js  permissionEntryRow.js  permissionEntryRow.ui  permissionSwitchRow.js  permissionSwitchRow.ui  resetButton.js  style.css  view.js  view.ui  window.js  window.ui
src/models/: applications.js  devices.js  features.js  filesystems.js  filesystemsOther.js  globalModel.js  info.js  monitor.js  overrideStatus.js  overrides.js  permissions.js  persistent.js  portals.js  sessionBus.js  settings.js  shared.js  sockets.js  systemBus.js  unsupported.js  usb.js  variables.js
src/widgets/: aboutDialog.js  aboutDialog.ui  appInfoViewer.js  appInfoViewer.ui  applicationRow.js  applicationRow.ui  busNameRow.js  busNameRow.ui  detailsButton.js  docsViewer.js  docsViewer.ui  globalInfoViewer.js  globalInfoViewer.ui  globalRow.js  globalRow.ui  groupRow.js  menu.ui  overrideStatusIcon.js  overrideStatusIcon.ui  pathRow.js  pathRow.ui  pathsViewer.js  pathsViewer.ui  permissionEntryRow.js  permissionEntryRow.ui  permissionPortalRow.js  permissionPortalRow.ui  permissionSwitchRow.js  permissionSwitchRow.ui  relativePathRow.js  relativePathRow.ui  resetButton.js  shortcutsWindow.js  shortcutsWindow.ui  undoPopup.js  undoPopup.ui  usbRow.js  usbRow.ui  variableEntryRow.js  variableEntryRow.ui  (+4 more)
tests/: meson.build  service.js
tests/content/: .flatpak-info  .flatpak-info.new  .flatpak-info.old
tests/content/custom/app/com.test.Extra/current/active/: metadata
tests/content/extra/app/com.test.Extra/current/active/: metadata
tests/content/global/flatpak/overrides/: com.test.GlobalRestored  global
tests/content/globalNegated/flatpak/overrides/: global
tests/content/globalResetMode/flatpak/overrides/: global
tests/content/installations.d/: extra.conf
tests/content/statuses/flatpak/overrides/: com.test.Statuses  com.test.Usb  global
tests/content/system/flatpak/app/com.test.Basic/current/active/: metadata
tests/content/system/flatpak/app/com.test.BasicNegated/current/active/: metadata
tests/content/system/flatpak/app/com.test.Bus/current/active/: metadata
tests/content/system/flatpak/app/com.test.Conditional/current/active/: metadata
tests/content/system/flatpak/app/com.test.Environment/current/active/: metadata
tests/content/system/flatpak/app/com.test.FilesystemWithMode/current/active/: metadata
tests/content/system/flatpak/app/com.test.Global/current/active/: metadata
tests/content/system/flatpak/app/com.test.Increase/current/active/: metadata
tests/content/system/flatpak/app/com.test.Malformed/current/active/: metadata
tests/content/system/flatpak/app/com.test.Negation/current/active/: metadata
tests/content/system/flatpak/app/com.test.Old/current/active/: metadata
tests/content/system/flatpak/app/com.test.Overriden/current/active/: metadata
tests/content/system/flatpak/app/com.test.Reduce/current/active/: metadata
tests/content/system/flatpak/app/com.test.ResetMode/current/active/: metadata
tests/content/system/flatpak/app/com.test.Statuses/current/active/: metadata
tests/content/system/flatpak/app/com.test.Unsupported/current/active/: metadata
tests/content/system/flatpak/overrides/: global
tests/content/user/flatpak/overrides/: com.test.Basic  com.test.BasicNegated  com.test.BasicNegative  com.test.Conditional  com.test.Example  com.test.FilesystemWithMode  com.test.Old  com.test.TrailingSemicolon  com.test.Unsupported  com.test.Usb  com.test.Variables  global
tests/src/: model.js  testModel.js  testModels.js  testPathRow.js  testPathsViewer.js  testUsbRow.js  utils.js
(+48 files in other folders)
